--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,27 @@
+/* barlow-regular - latin */
+@font-face {
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/barlow-v12-latin-regular.woff2") format("woff2"), url("../fonts/barlow-v12-latin-regular.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* barlow-700 - latin */
+@font-face {
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/barlow-v12-latin-700.woff2") format("woff2"), url("../fonts/barlow-v12-latin-700.woff") format("woff");
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* fraunces-900 - latin */
+@font-face {
+  font-family: "Fraunces 9pt";
+  font-style: normal;
+  font-weight: 900;
+  src: url("../fonts/fraunces-9pt-black.woff2") format("woff2"), url("../fonts/fraunces-9pt-black.woff") format("woff");
+  /* Modern Browsers */
+}
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -6,6 +30,7 @@ html {
 
 body {
   margin: 0;
+  font-family: "Barlow";
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -48,10 +73,868 @@ img {
 }
 
 .container {
-  max-width: 100%;
+  max-width: 1320px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.site-header {
+  padding: 44px 0;
+}
+
+.site-header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.site-header__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.site-header__item + .site-header__item {
+  margin-left: 33px;
+}
+
+.site-header__item {
+  position: relative;
+}
+
+.site-header__item:hover::after {
+  width: 100%;
+}
+
+.site-header__item::after {
+  content: "";
+  position: absolute;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  width: 0;
+  height: 5px;
+  background-color: #0E8784;
+  left: 0;
+  bottom: -10px;
+}
+
+.site-header__link {
+  font-family: "Barlow";
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.923077px;
+  text-transform: uppercase;
+  color: #83888F;
+}
+
+.site-header__menu {
+  width: 16px;
+  height: 15px;
+  background-repeat: no-repeat;
+  background-image: url("../../img/menu.svg");
+  background-position: center;
+  background-color: transparent;
+  border: none;
+  display: none;
+}
+
+@media only screen and (max-width: 754px) {
+  .site-header__list {
+    display: none;
+  }
+  .site-header__menu {
+    display: inline-block;
+  }
+  .site-header__logo {
+    max-width: 163px;
+  }
+}
+.hero {
+  padding-bottom: 123px;
+}
+
+.hero__block {
+  padding: 117px 0;
+  background-repeat: no-repeat;
+  background-image: url("../../img/hero-bg.jpg");
+  border-radius: 10px;
+}
+
+.hero__title {
+  font-family: "Fraunces 9pt";
+  max-width: 493px;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 72px;
+  color: #FEFCF7;
+  margin-bottom: 32px;
+}
+
+.hero__text {
+  max-width: 445px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+  margin-bottom: 56px;
+}
+
+.hero__link {
+  font-family: "Fraunces 9pt";
+  padding: 15px 30px;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 25px;
+  color: #FEFCF7;
+  background-color: #0E8784;
+  border-radius: 6px;
+}
+
+.hero__content {
+  padding-left: 85px;
+}
+
+@media screen and (max-width: 934px) {
+  .hero__block {
+    background-image: url("../../img/hero-bg-tablet.jpg");
+    background-size: cover;
+    background-position-x: right;
+  }
+  .hero__title {
+    max-width: 329px;
+    font-size: 48px;
+    line-height: 48px;
+  }
+  .hero__text {
+    max-width: 398px;
+    font-size: 15px;
+    line-height: 25px;
+  }
+}
+@media screen and (max-width: 554px) {
+  .hero__block {
+    background-image: url("../../img/hero-bg-mobile.jpg");
+    padding: 100px 0;
+  }
+  .hero__content {
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+  }
+  .hero__title {
+    max-width: 100%;
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .hero__text {
+    max-width: 100%;
+    font-size: 15px;
+    line-height: 25px;
+  }
+}
+.collection {
+  padding-bottom: 200px;
+}
+
+.collection__box {
+  max-width: 1111px;
+  margin: 0 auto;
+}
+
+.collection__img-box {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("../../img/collection-bg.png");
+  padding-top: 126px;
+}
+
+.collection__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.collection__item {
+  max-width: 255px;
+  text-align: center;
+}
+
+.collection__img-block {
+  max-width: 255px;
+  height: 193px;
+  margin-bottom: 71px;
+}
+
+.collection__title {
+  font-family: "Fraunces 9pt";
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #333D4B;
+  margin-bottom: 24px;
+}
+
+.collection__text {
+  max-width: 255px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #333D4B;
+}
+
+@media screen and (max-width: 934px) {
+  .collection__img-box {
+    background-image: url("../../img/collection-bg-tablet.png");
+    background-size: contain;
+    padding-top: 95px;
+  }
+  .collection__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .collection__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    max-width: 100%;
+    text-align: start;
+    margin-bottom: 32px;
+  }
+  .collection__img-block {
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    max-width: 300px;
+    background-size: contain;
+    margin: 0;
+    margin-right: 36px;
+  }
+  .collection__block-2 {
+    max-width: 100%;
+  }
+  .collection__text {
+    max-width: 282px;
+    font-size: 15px;
+    line-height: 25px;
+  }
+  .collection {
+    padding-bottom: 144px;
+  }
+}
+@media screen and (max-width: 554px) {
+  .collection {
+    padding-bottom: 120px;
+  }
+  .collection__img-box {
+    background-image: url("../../img/collection-bg-mobile.png");
+    background-size: contain;
+    padding-top: 60px;
+  }
+  .collection__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 100%;
+    margin-bottom: 32px;
+    text-align: center;
+    margin-bottom: 42px;
+  }
+  .collection__img-block {
+    margin-right: 0;
+  }
+  .collection__block-2 {
+    margin-top: 24px;
+  }
+}
+.choose {
+  padding-bottom: 200px;
+}
+
+.choose__top {
+  text-align: center;
+  background-color: #282F38;
+  border-radius: 10px;
+  padding-top: 100px;
+  padding-bottom: 87px;
+  position: relative;
+}
+
+.choose__title {
+  font-family: "Fraunces 9pt";
+  font-weight: 900;
+  font-size: 40px;
+  line-height: 48px;
+  color: #FEFCF7;
+  margin-bottom: 32px;
+}
+
+.choose__text {
+  margin: 0 auto;
+  max-width: 540px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+  opacity: 0.8;
+}
+
+.choose__list {
+  max-width: 1111px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 20px;
+}
+
+.choose__item {
+  max-width: 350px;
+  padding: 72px 48px 48px 48px;
+  background: #0E8784;
+  border-radius: 8px;
+  text-align: center;
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-box-shadow: 0 0 20px 2px rgb(0, 0, 0);
+          box-shadow: 0 0 20px 2px rgb(0, 0, 0);
+}
+.choose__item:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  z-index: 2;
+}
+
+.choose__item:nth-child(1):before {
+  content: "";
+  width: 72px;
+  height: 72px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-image: url("../../img/choose-img-1.svg");
+  margin-bottom: 56px;
+}
+
+.choose__item:nth-child(2):before {
+  content: "";
+  width: 72px;
+  height: 72px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-image: url("../../img/choose-img-2.svg");
+  margin-bottom: 56px;
+}
+
+.choose__item:nth-child(3):before {
+  content: "";
+  width: 72px;
+  height: 72px;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-image: url("../../img/choose-img-3.svg");
+  margin-bottom: 56px;
+}
+
+.choose__sup-title {
+  font-family: "Fraunces 9pt";
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #FEFCF7;
+  margin-bottom: 24px;
+}
+
+.choose__sup-text {
+  max-width: 255px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #FEFCF7;
+}
+
+.choose__emty {
+  position: absolute;
+  width: 100%;
+  height: 245px;
+  border-radius: 10px;
+  background-color: #282F38;
+  z-index: -1;
+  bottom: -64%;
+}
+
+@media screen and (max-width: 934px) {
+  .choose {
+    padding-bottom: 144px;
+  }
+  .choose__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .choose__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    max-width: 150%;
+    height: 180px;
+    padding: 41px 48px 41px 70px;
+  }
+  .choose__box {
+    padding-left: 55px;
+    text-align: start;
+  }
+  .choose__item:nth-child(1)::before {
+    margin-bottom: 0;
+  }
+  .choose__item:nth-child(2)::before {
+    margin-bottom: 0;
+  }
+  .choose__item:nth-child(3)::before {
+    margin-bottom: 0;
+  }
+  .choose__sup-title {
+    margin-bottom: 0;
+  }
+  .choose__sup-text {
+    text-align: start;
+  }
+  .choose__title {
+    max-width: 264px;
+    margin: 0 auto;
+    margin-bottom: 24px;
+    font-size: 32px;
+    line-height: 48px;
+  }
+  .choose__top {
+    padding-top: 56px;
+  }
+  .choose__emty {
+    height: 316px;
+    bottom: -300px;
+  }
+}
+@media screen and (max-width: 934px) and (max-width: 554px) {
+  .choose {
+    padding-bottom: 120px;
+  }
+  .choose__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .choose__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 78%;
+    height: 382px;
+    padding: 72px 12px 51px 12px;
+  }
+  .choose__box {
+    text-align: center;
+    padding: 0;
+    margin: 0 auto;
+  }
+  .choose__sup-title {
+    max-width: 255px;
+    margin-bottom: 24px;
+    font-size: 22px;
+  }
+  .choose__emty {
+    position: absolute;
+    width: 100%;
+    height: 760px;
+    border-radius: 10px;
+    background-color: #282F38;
+    z-index: -1;
+    bottom: -277%;
+  }
+  .choose__text {
+    display: none;
+  }
+  .choose__sup-text {
+    text-align: center;
+    max-width: 212px;
+  }
+  .choose__item:nth-child(1)::before {
+    margin-bottom: 46px;
+  }
+  .choose__item:nth-child(2)::before {
+    margin-bottom: 46px;
+  }
+  .choose__item:nth-child(3)::before {
+    margin-bottom: 46px;
+  }
+}
+.work {
+  padding-bottom: 200px;
+}
+
+.work__block {
+  max-width: 1111px;
+  margin: 0 auto;
+}
+
+.work__title {
+  font-family: "Fraunces 9pt";
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+  color: #83888F;
+  margin-bottom: 80px;
+}
+
+.work__line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 760px;
+  height: 2px;
+  background-color: #FDD6BA;
+  margin-bottom: 82px;
+}
+
+.work__radius {
+  width: 31px;
+  height: 31px;
+  display: inline-block;
+  background: #FEFCF7;
+  border: 2px solid #0E8784;
+  border-radius: 50%;
+}
+
+.work__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 64px;
+  gap: 10px;
+}
+
+.work__sup-title {
+  font-family: "Fraunces 9pt";
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 72px;
+  color: #FDD6BA;
+  margin-bottom: 38px;
+}
+
+.work__sub-title {
+  max-width: 255px;
+  font-family: "Fraunces 9pt";
+  font-weight: 900;
+  font-size: 32px;
+  line-height: 36px;
+  color: #333D4B;
+  margin-bottom: 42px;
+}
+
+.work__sub-text {
+  max-width: 285px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #333D4B;
+}
+
+.btn {
+  padding: 15px 30px;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 25px;
+  color: #FEFCF7;
+  background-color: #0E8784;
+  border-radius: 6px;
+  -webkit-transition: 0.7s ease;
+  transition: 0.7s ease;
+}
+
+.btn:hover {
+  background-color: #000000;
+  color: #0D99FF;
+}
+
+@media screen and (max-width: 945px) {
+  .work {
+    padding-bottom: 144px;
+  }
+  .work__title {
+    margin-bottom: 40px;
+  }
+  .work__line {
+    margin-bottom: 48px;
+  }
+  .work__block {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .work__item + .work__item {
+    margin-left: 10px;
+  }
+  .work__sub-title {
+    max-width: 223px;
+    font-size: 28px;
+    line-height: 32px;
+  }
+  .work__sub-text {
+    max-width: 223px;
+    font-size: 15px;
+    line-height: 25px;
+  }
+  .work__list {
+    margin-bottom: 44px;
+  }
+  .work__line {
+    max-width: 497px;
+  }
+}
+@media screen and (max-width: 554px) {
+  .work {
+    padding-bottom: 120px;
+  }
+  .work__block {
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+  .work__sup-block {
+    text-align: center;
+  }
+  .work__title {
+    margin-bottom: 80px;
+  }
+  .work__item + .work__item {
+    margin-left: 0;
+  }
+  .work__line {
+    display: none;
+  }
+  .work__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .work__item {
+    max-width: 327px;
+    text-align: center;
+    padding-bottom: 56px;
+  }
+  .work__sub-title {
+    max-width: 327px;
+    margin-bottom: 24px;
+  }
+  .work__sub-text {
+    max-width: 327px;
+  }
+  .work__box {
+    text-align: center;
+  }
+}
+.footer {
+  background-color: #282F38;
+}
+
+.footer__box {
+  max-width: 1111px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__content-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__item {
+  position: relative;
+}
+
+.footer__item:hover::after {
+  width: 100%;
+}
+
+.footer__item::after {
+  content: "";
+  position: absolute;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  width: 0;
+  height: 5px;
+  background-color: #0E8784;
+  left: 0;
+  bottom: -10px;
+}
+
+.footer__img-block {
+  max-width: 236px;
+  padding-top: 47px;
+  padding-bottom: 47px;
+}
+
+.footer__nav {
+  padding-left: 102px;
+}
+
+.footer__link {
+  max-width: 125px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.923077px;
+  text-transform: uppercase;
+  color: #83888F;
+}
+
+.footer__item + .footer__item {
+  margin-left: 33px;
+}
+
+.footer__messengers {
+  width: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__sup-link {
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+.footer__sup-link:hover {
+  -webkit-transform: scale(1.8);
+          transform: scale(1.8);
+  z-index: 2;
+}
+
+@media screen and (max-width: 934px) {
+  .footer__box, .footer__content-block {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__box {
+    padding: 54px 0;
+  }
+  .footer__img-block {
+    padding: 0;
+    padding-bottom: 32px;
+  }
+  .footer__nav {
+    padding-left: 0;
+    padding-bottom: 65px;
+  }
+}
+@media screen and (max-width: 554px) {
+  .footer__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__img-block {
+    padding-bottom: 48px;
+  }
+  .footer__nav {
+    padding-bottom: 48px;
+  }
+  .footer__item {
+    padding-bottom: 24px;
+  }
+  .footer__item + .footer__item {
+    margin-left: 0;
+  }
+  .footer__item::after {
+    bottom: 5px;
+  }
 }/*# sourceMappingURL=main.css.map */
