--- a/scss/block/_block.scss
+++ b/scss/block/_block.scss
@@ -1,2 +1,7 @@
 @import "container";
 @import "header";
+@import "hero";
+@import "collection";
+@import "choose";
+@import "work";
+@import "footer";
