--- a/scss/block/_choose.scss
+++ b/scss/block/_choose.scss
@@ -59,7 +59,7 @@
   height: 72px;
   display: inline-block;
   background-repeat: no-repeat;
-  background-image: url('../../img/choose-img-1.svg');
+  background-image: url('../img/choose-img-1.svg');
   margin-bottom: 56px;
 }
 
@@ -69,7 +69,7 @@
   height: 72px;
   display: inline-block;
   background-repeat: no-repeat;
-  background-image: url('../../img/choose-img-2.svg');
+  background-image: url('../img/choose-img-2.svg');
   margin-bottom: 56px;
 }
 
@@ -79,7 +79,7 @@
   height: 72px;
   display: inline-block;
   background-repeat: no-repeat;
-  background-image: url('../../img/choose-img-3.svg');
+  background-image: url('../img/choose-img-3.svg');
   margin-bottom: 56px;
 }
 
