--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -48,7 +48,7 @@
   width: 16px;
   height: 15px;
   background-repeat: no-repeat;
-  background-image: url('../../img/menu.svg');
+  background-image: url('../img/menu.svg');
   background-position: center;
   background-color: transparent;
   border: none;
