--- a/scss/block/_hero.scss
+++ b/scss/block/_hero.scss
@@ -5,7 +5,7 @@
 .hero__block {
   padding: 117px 0;
   background-repeat: no-repeat;
-  background-image: url('../../img/hero-bg.jpg');
+  background-image: url('../img/hero-bg.jpg');
   border-radius: 10px;
 }
 
@@ -39,7 +39,7 @@
 
 @media screen and(max-width:934px) {
   .hero__block {
-    background-image: url('../../img/hero-bg-tablet.jpg');
+    background-image: url('../img/hero-bg-tablet.jpg');
     background-size: cover;
     background-position-x: right;
   }
@@ -59,7 +59,7 @@
 
 @media screen and(max-width:554px) {
   .hero__block {
-    background-image: url('../../img/hero-bg-mobile.jpg');
+    background-image: url('../img/hero-bg-mobile.jpg');
     padding: 100px 0;
   }
 
