--- a/css/main.css
+++ b/css/main.css
@@ -144,11 +144,108 @@ img {
   width: 16px;
   height: 15px;
   background-repeat: no-repeat;
-  background-image: url("../img/menu.svg");
   background-position: center;
   background-color: transparent;
   border: none;
   display: none;
+}
+
+.site-header__label {
+  width: 20px;
+  height: 15px;
+  display: inline-block;
+}
+
+.site-header__mobile-list {
+  height: 68vh;
+  border-radius: 10px;
+  padding-top: 20%;
+  top: 16.5%;
+  left: 3%;
+  right: 3%;
+  text-align: center;
+  position: absolute;
+  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.93);
+  display: none;
+}
+
+.site-header__checkBox:checked ~ .site-header__mobile-list {
+  display: block;
+}
+
+.site-header__mobile-link {
+  font-family: "Fraunces 9pt";
+  font-size: 30px;
+  font-weight: 900;
+  padding: 10px 0;
+  text-transform: uppercase;
+  color: #009688;
+}
+
+.site-header__mobile-item a {
+  position: relative;
+}
+
+.site-header__mobile-item a::after {
+  content: "";
+  position: absolute;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+  width: 0;
+  height: 5px;
+  background-color: #10c961;
+  left: 0;
+  bottom: 0;
+}
+
+.site-header__mobile-item a:hover::after {
+  width: 100%;
+}
+
+.site-header__label {
+  position: absolute;
+  top: 86px;
+  right: 2%;
+  margin-left: -2em;
+  margin-top: -45px;
+  width: 2em;
+  height: 24px;
+  z-index: 5;
+}
+
+.site-header__label div {
+  position: relative;
+  width: 20px;
+  height: 3px;
+  border-radius: 3px;
+  background-color: #000;
+  margin-top: 4px;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.site-header__checkBox:checked + .site-header__label .top-bun {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  margin-top: 25px;
+}
+
+.site-header__checkBox:checked + .site-header__label .bottom-bun {
+  opacity: 0;
+  -webkit-transform: rotate(100deg);
+          transform: rotate(100deg);
+}
+
+.site-header__checkBox:checked + .site-header__label .meat {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  margin-top: -3px;
+}
+
+.site-header__checkBox:checked + .site-header__label + .site-header__mobile-list {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 @media only screen and (max-width: 754px) {
@@ -160,6 +257,14 @@ img {
   }
   .site-header__logo {
     max-width: 163px;
+  }
+}
+@media only screen and (max-width: 554px) {
+  .site-header__mobile-list {
+    height: 80vh;
+  }
+  .site-header__mobile-link {
+    font-size: 26px;
   }
 }
 .hero {
