Tablet and Mobile responsive added!

--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -63,7 +63,7 @@
 
 
 .site-header__mobile-list{
-  height: 68vh;
+  height: 68%;
   border-radius: 10px;
   padding-top: 20%;
   top: 16.5%;
@@ -163,7 +163,7 @@
 
 @media only screen and (max-width:554px) {
   .site-header__mobile-list{
-    height: 80vh;
+    height: 80%;
   }
 
   .site-header__mobile-link{
