--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,11 @@ img {
 
 .site-header {
   padding: 44px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+  background-color: #FFFFFF;
+  top: 0;
 }
 
 .site-header__container {
@@ -166,7 +171,7 @@ img {
   text-align: center;
   position: absolute;
   z-index: 3;
-  background-color: rgba(0, 0, 0, 0.93);
+  background-color: rgba(0, 0, 0, 0.9);
   display: none;
 }
 
@@ -269,6 +274,7 @@ img {
 }
 .hero {
   padding-bottom: 123px;
+  margin-top: 115px;
 }
 
 .hero__block {
