--- a/scss/block/_header.scss
+++ b/scss/block/_header.scss
@@ -1,5 +1,10 @@
 .site-header {
   padding: 44px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+  background-color: #FFFFFF;
+  top: 0;
 }
 
 .site-header__container {
@@ -72,7 +77,7 @@
   text-align: center;
   position: absolute;
   z-index: 3;
-  background-color: rgba(0, 0, 0, 0.93);
+  background-color: rgba(0, 0, 0, 0.9);
   display: none;
 }
 
