--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,4 +3,14 @@
 @import "global";
 @import "mixin";
 
+// 1 PAGE
+
 @import "block/block";
+
+// 2 PAGE
+
+@import "about-block/about-block";
+
+// 3 PAGE
+
+@import "create-block/create-block";
